# inbound

./: .gitmodules
assets/: c0.xcf
assets/flags/: austria.xcf  germany.xcf  greece.xcf  hungary.xcf  macedonia.xcf  serbia.xcf  turkey.xcf
src/: CMakeLists.txt  main.c
